cmake_minimum_required(VERSION 3.19)
project(c_tutorial C)

set(CMAKE_C_STANDARD 99)

add_executable(c_tutorial main.c)
add_executable(test test.c)
add_executable(simple1 Sessions/ss1_intro/simple1.c)
add_executable(simple2 Sessions/ss1_intro/simple2.c)
add_executable(simple3 Sessions/ss1_intro/simple3.c)
add_executable(simple4 Sessions/ss1_intro/simple4.c)
add_executable(simple21 Sessions/ss2_conditional_branch/simple21.c)
add_executable(simple22 Sessions/ss2_conditional_branch/simple22.c)
add_executable(simple23 Sessions/ss2_conditional_branch/simple23.c)
add_executable(simple24 Sessions/ss2_conditional_branch/simple24.c)
add_executable(simple25 Sessions/ss2_conditional_branch/simple25.c)
add_executable(example1 Homeworks/homework_1st/example1.c)
add_executable(example2 Homeworks/homework_1st/example2.c)
add_executable(example3 Homeworks/homework_1st/example3.c)
add_executable(example4 Homeworks/homework_1st/example4.c)
add_executable(example5 Homeworks/homework_1st/example5.c)
add_executable(example6 Homeworks/homework_1st/example6.c)
add_executable(example7 Homeworks/homework_1st/example7.c)