cmake_minimum_required(VERSION 3.19)
project(c_tutorial C)

set(CMAKE_C_STANDARD 99)

add_executable(c_tutorial main.c)
add_executable(test test.c)
add_executable(simple1 Sessions/ss1_intro/simple1.c)
add_executable(simple2 Sessions/ss1_intro/simple2.c)
add_executable(simple3 Sessions/ss1_intro/simple3.c)
add_executable(simple4 Sessions/ss1_intro/simple4.c)
add_executable(simple21 Sessions/ss2_conditional_branch/simple21.c)
add_executable(simple22 Sessions/ss2_conditional_branch/simple22.c)
add_executable(simple23 Sessions/ss2_conditional_branch/simple23.c)
add_executable(simple24 Sessions/ss2_conditional_branch/simple24.c)
add_executable(simple25 Sessions/ss2_conditional_branch/simple25.c)
add_executable(example1 Homeworks/homework_1st/example1.c)
add_executable(example2 Homeworks/homework_1st/example2.c)
add_executable(example3 Homeworks/homework_1st/example3.c)
add_executable(example4 Homeworks/homework_1st/example4.c)
add_executable(example5 Homeworks/homework_1st/example5.c)
add_executable(example6 Homeworks/homework_1st/example6.c)
add_executable(example7 Homeworks/homework_1st/example7.c)
add_executable(homework_review Homeworks/homework_1st/homework_review.c)
add_executable(example8 Homeworks/homework_1st/example8.c)
add_executable(simple31 Sessions/ss3_loop/simple31.c)
add_executable(simple32 Sessions/ss3_loop/simple32.c)
add_executable(simple33 Sessions/ss3_loop/simple33.c)
add_executable(simple34 Sessions/ss3_loop/simple34.c)
add_executable(simple35 Sessions/ss3_loop/simple35.c)
add_executable(simple36 Sessions/ss3_loop/simple36.c)
add_executable(example22 Homeworks/homework_2nd/example22.c)
add_executable(example25 Homeworks/homework_2nd/example25.c)
add_executable(example21 Homeworks/homework_2nd/example21.c)
add_executable(example26 Homeworks/homework_2nd/example26.c)
add_executable(example29 Homeworks/homework_2nd/example29.c)
add_executable(example28 Homeworks/homework_2nd/example28.c)
add_executable(example27 Homeworks/homework_2nd/example27.c)
add_executable(sample41 Sessions/ss4_function/sample41.c)
add_executable(simple42 Sessions/ss4_function/simple42.c)
add_executable(simple43 Sessions/ss4_function/simple43.c)
add_executable(simple44 Sessions/ss4_function/simple44.c)
add_executable(example32 Homeworks/homework_3st/example32.c)
add_executable(example31 Homeworks/homework_3st/example31.c)
add_executable(example33 Homeworks/homework_3st/example33.c)
add_executable(example34 Homeworks/homework_3st/example34.c)
add_executable(simple51 Sessions/ss5_array/simple51.c)
add_executable(simple52 Sessions/ss5_array/simple52.c)
add_executable(simple53 Sessions/ss5_array/simple53.c)
add_executable(simple61 Sessions/ss6_string/simple61.c)
add_executable(simple62 Sessions/ss6_string/simple62.c)
add_executable(simple63 Sessions/ss6_string/simple63.c)
add_executable(example41 Homeworks/homework_4st/example41.c)
add_executable(example42 Homeworks/homework_4st/example42.c)
add_executable(example51 Homeworks/homework_5st/example51.c)

add_executable(example52 Homeworks/homework_5st/example52.c)
add_executable(example43 Homeworks/homework_4st/example43.c)
add_executable(1 Homeworks/luyen_de/4.c)
add_executable(4 Homeworks/luyen_de/4.c)
add_executable(2 Homeworks/luyen_de/2.c)
add_executable(9 Homeworks/luyen_de/9.c)
add_executable(14 Homeworks/luyen_de/14.c)
add_executable(simple71 Sessions/ss7_pointer/simple71.c)
add_executable(simple72 Sessions/ss7_pointer/simple72.c)
add_executable(solonnhattrong2socontro1 Homeworks/luyen_de/solonnhattrong2socontro1.c)
add_executable(simple73 Sessions/ss7_pointer/simple73.c)
add_executable(simple74 Sessions/ss7_pointer/simple74.c)
add_executable(simple75 Sessions/ss7_pointer/simple75.c)
add_executable(simple81 Sessions/ss8_struct/simple81.c)
add_executable(simple82 Sessions/ss8_struct/simple82.c)
add_executable(11 Sessions/ss8_struct/11.c)
add_executable(11_struct Sessions/ss8_struct/11_struct.c)
add_executable(simple91 Sessions/ss9_linked_list/simple91.c)

add_executable(simple92 Sessions/ss9_linked_list/simple92.c)